--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "remove-css",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "vite"
   },
   "author": "cyzlucky@gmail.com",
   "license": "MIT",
+  "devDependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "styled-components": "^5.3.9",
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1"
+  },
   "dependencies": {
-    "css": "^3.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
